<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="460dp"
        android:background="@color/bg_light_3x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_header"
            style="@style/LoginHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_header_brand"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_iw_brand"
                android:tint="@color/brand_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header_text"
                style="@style/BrandText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_header_brand" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_cl"
            android:layout_marginTop="36dp"
            android:background="@drawable/input_bg"
            android:layout_marginHorizontal="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/login_header">

            <ImageView
                android:id="@+id/icon_email"
                style="@style/InputIconLogin"
                android:contentDescription="@string/icon_email"
                android:src="@drawable/ic_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                style="@style/LoginInputForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_login_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_email"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_cl"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:layout_marginHorizontal="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/email_cl">

            <ImageView
                android:id="@+id/icon_password"
                style="@style/InputIconLogin"
                android:contentDescription="@string/icon_password"
                android:src="@drawable/ic_lock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                style="@style/LoginInputForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_login_hint"
                android:importantForAccessibility="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_password"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/eye_on"
                style="@style/ShowPasswordLogin"
                android:src="@drawable/ic_eye"
                app:layout_constraintBottom_toBottomOf="@+id/password_cl"
                app:layout_constraintEnd_toEndOf="@+id/password_cl"
                app:layout_constraintTop_toTopOf="@+id/password_cl"
                android:contentDescription="@string/cd" />

            <ImageView
                android:id="@+id/eye_off"
                style="@style/ShowPasswordLogin"
                android:src="@drawable/ic_eye_off"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/password_cl"
                app:layout_constraintEnd_toEndOf="@+id/password_cl"
                app:layout_constraintTop_toTopOf="@+id/password_cl"
                android:contentDescription="@string/cd" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remember_me_cb" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/remember_me"
            style="@style/LoginTextAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/remember_me"
            app:layout_constraintStart_toEndOf="@+id/remember_me_cb"
            app:layout_constraintTop_toBottomOf="@+id/password_cl" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/remember_me_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/remember_me"
            app:layout_constraintStart_toStartOf="@+id/password_cl"
            app:layout_constraintTop_toTopOf="@+id/remember_me" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password"
            style="@style/LoginTextAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/password_cl"
            app:layout_constraintTop_toBottomOf="@+id/password_cl" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:indeterminate="true"
            android:layout_marginTop="24dp"
            android:indeterminateTint="@color/brand_color"
            android:indeterminateTintMode="src_atop"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>