<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/stall_ll"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stall_item_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true">

        <carbon.widget.ImageView
            android:id="@+id/stall_image_iv"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/stall_name_tv"
            style="@style/StyleNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="12dp"
            android:text="@string/placeholder_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stall_image_iv" />

        <TextView
            android:id="@+id/stall_category_tv"
            style="@style/StyleGeneralText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/placeholder_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stall_name_tv" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:weightSum="12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/stall_category_tv"
            app:layout_constraintTop_toBottomOf="@+id/stall_category_tv">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/stall_price_dk_tv"
                    style="@style/StylePriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/per_porsi_dk_tv"
                    style="@style/StyleSupportText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/PerPorsi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/stall_price_dk_tv"
                    app:layout_constraintTop_toTopOf="@+id/stall_price_dk_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/AddItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/stall_name_tv"
            app:rippleColor="@color/iwc_orange" />

        <TextView
            android:id="@+id/stall_type_tv"
            style="@style/StyleSupportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/card_label_catalog"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:text="Main Course"
            android:textColor="@color/text_dark_5"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
