<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_buffet_pack_ll"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_buffet_pack_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="0dp">

        <carbon.widget.ImageView
            android:id="@+id/buffet_pack_img"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/buffet_pack_name_tv"
            style="@style/StyleNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="6dp"
            android:text="@string/placeholder_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buffet_pack_img" />

        <LinearLayout
            android:id="@+id/pack_description_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buffet_pack_name_tv"
            android:weightSum="2">

            <TextView
                android:id="@+id/buffet_pack_description_tv"
                style="@style/StyleGeneralText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginStart="0dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="true"
                android:text="@string/placeholder_1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:weightSum="12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pack_description_ll"
            app:layout_constraintTop_toBottomOf="@+id/pack_description_ll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/buffet_pack_price_tv"
                    style="@style/StylePriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/per_porsi_dk_tv"
                    style="@style/StyleSupportText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/PerPorsi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buffet_pack_price_tv"
                    app:layout_constraintTop_toTopOf="@+id/buffet_pack_price_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/AddItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_marginEnd="6dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buffet_pack_name_tv"
            app:rippleColor="@color/iwc_orange" />

        <TextView
            android:id="@+id/pack_type_tv"
            style="@style/StyleSupportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/card_bg2_stroke"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:text="Main Course"
            android:textColor="@color/text_dark_5"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/buffet_pack_img"
            app:layout_constraintTop_toTopOf="@id/buffet_pack_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
